//ALL REQUEST PROTOS SHOULD INCLUDE A MinimumUserProto AS optional that represents which client sent it/triggered it 
//DO NO START PROPERTY METHODS WITH THE WORDS NEW OR COPY

import "Chat.proto";
import "Reward.proto";
import "User.proto";

package com.lvl6.proto;

option java_outer_classname = "EventRewardProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO


message SendTangoGiftRequestProto {
	optional MinimumUserProto sender = 1;
	optional int64 clientTime = 2;
	repeated string tangoUserIds = 3;
	
	optional string senderTangoUserId = 4; 	
}
																						//DONE
message SendTangoGiftResponseProto {
     optional MinimumUserProto sender = 1;
     optional SendTangoGiftStatus status = 2;
     repeated string tangoUserIdsNotInToonSquad = 3;
     repeated string tangoUserIdsInToonSquad = 4;
     
     //ReceivedGiftResponseProto is sent to the users tied to tangoUserIds
     
     enum SendTangoGiftStatus {
     	SUCCESS = 1;
     	FAIL_OTHER = 2;
     }
}

//------------------------------------------------------------------------------------------

message ReceivedGiftResponseProto {
	optional MinimumUserProto sender = 1;  //person who gave out the gift to everyone
	optional ChatScope scope = 2 [default = PRIVATE];
	repeated UserGiftProto userGifts = 3;
}

//------------------------------------------------------------------------------------------
//MiniJobForUser is deleted here and user monsters' healths are decremented here
/*message RedeemMiniJobRequestProto {                         
     optional MinimumUserProtoWithMaxResources sender = 1;
     optional int64 clientTime = 2;
     optional string userMiniJobUuid = 3;
     
	repeated UserMonsterCurrentHealthProto umchp = 6;
}

																						//DONE
message RedeemMiniJobResponseProto {
     optional MinimumUserProtoWithMaxResources sender = 1;
     optional FullUserMonsterProto fump = 2; //this is if the mini job gives monster
     
     optional RedeemMiniJobStatus status = 3;    
     
     
     enum RedeemMiniJobStatus {
          SUCCESS = 1;
          FAIL_OTHER = 2;
          FAIL_NO_MINI_JOB_EXISTS = 3;
          FAIL_MINI_JOB_INCOMPLETE = 4;
     }
}*/
